--- a/new.html
+++ b/new.html
@@ -9,7 +9,7 @@
 <body>
    <div class="container">
         <div class="item-1">
-            <img src="./_.jpeg" alt="Prabhas" width="250px" style="margin-top: 40px; margin-bottom: 40px;">
+            <img src="./prabas.jpeg" alt="Prabhas" width="250px" style="margin-top: 40px; margin-bottom: 40px;">
             <h2>Prabhas💪🏻❤️‍🔥</h2>
             <p>A child from the Mahishmati kingdom is raised by tribal people and one day learns about his royal heritage, his father's bravery in battle and a mission to overthrow the incumbent ruler.</p>
          </div>
@@ -25,7 +25,7 @@
             <p>Banner becomes the monstrous Hulk as an unwitting pawn in a military scheme to reinvigorate the "super soldier" program through gamma radiation.</p>
         </div>
          <div class="item-1">
-            <img src="./_ (3).jpeg" alt="Donglee" width="250px" style="margin-bottom: 78px; margin-top: 75px;">
+            <img src="./dongle.jpeg" alt="Donglee" width="250px" style="margin-bottom: 78px; margin-top: 75px;">
             <h2>Donglee🤩</h2>
             <p>Lee Dong-seok, better known by the stage names Ma Dong-seok and Don Lee, is an American actor and film producer based in South Korea. He gained early recognition for his supporting roles in Nameless Gangster: Rules of the Time and The Neighbor.</p>
         </div>
